--- a/src/app/pages/supplier/add-article/add-article.component.html
+++ b/src/app/pages/supplier/add-article/add-article.component.html
@@ -35,7 +35,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="form-group mb-4">
-            <label>Prix</label>
+            <label>Prix de revient</label>
             <input class="form-control" formControlName="price" type="number" id="price" name="price"
                    placeholder="Ajouter un prix en AR">
             <div *ngIf="f.price.errors && f.price.dirty">
