--- a/src/app/layouts/app-footer/app-footer.component.html
+++ b/src/app/layouts/app-footer/app-footer.component.html
@@ -1,5 +1,4 @@
-<div class="font-13">2018 © <b>Adminca</b> - Save your time, choose the best</div>
+<div class="font-13">2019 © <b>Freezone</b></div>
 <div>
-    <a class="px-3 pl-4" href="http://themeforest.net/item/adminca-responsive-bootstrap-4-3-angular-4-admin-dashboard-template/20912589" target="_blank">Purchase</a>
-    <a class="px-3" href="http://admincast.com/adminca/documentation.html" target="_blank">Docs</a>
+  <a class="px-3" href="{{author}}" target="_blank">STRATÉGIE, CONCEPTION SOUTENUES PAR FALICREA</a>
 </div>
