--- a/src/app/layouts/app-sidebar/app-sidebar.component.html
+++ b/src/app/layouts/app-sidebar/app-sidebar.component.html
@@ -1,14 +1,10 @@
 
 <ul class="side-menu metismenu scroller">
   <li routerLinkActive="active">
-    <a href="href=&quot;javascript:;&quot;">
+    <a routerLinkActive="active" routerLink="/dashboard">
       <i class="sidebar-item-icon ti-view-grid"></i>
       <span class="nav-label">Tableau de board</span>
-      <i class="fa fa-angle-left arrow"></i>
     </a>
-    <ul class="nav-2-level collapse" routerLinkActive="in">
-      <li><a routerLinkActive="active" routerLink="/dashboard">Les demandes</a></li>
-    </ul>
   </li>
   <li routerLinkActive="active">
     <a href="href=&quot;javascript:;&quot;">
