--- a/src/app/pages/supplier/review-mail-supplier/review-mail-supplier.component.html
+++ b/src/app/pages/supplier/review-mail-supplier/review-mail-supplier.component.html
@@ -1,9 +1,9 @@
-<form [formGroup]="Form">
+<form [formGroup]="Form" (ngSubmit)="onSend()">
   <div class="modal-header px-4 py-3 bg-primary-400" *ngIf="Fournisseur">
     <div>
       <h5 class="modal-title text-white">ENVOYER PAR E-MAIL
       </h5>
-      <small class="text-white">à {{Fournisseur.data.user_email}} pour {{Fournisseur.company_name}}</small>
+      <small class="text-white">à {{Fournisseur.data.user_email}} pour {{Fournisseur.company_name}} ({{Fournisseur.reference}})</small>
 
     </div>
     <button class="close text-white" type="button" data-dismiss="modal" aria-label="Close">
@@ -37,7 +37,21 @@
 
         <div class="form-group mb-4">
           <label>Sujet</label>
-          <input class="form-control" formControlName="subject" type="text" placeholder="Objet de votre mail">
+          <input class="form-control" formControlName="subject" type="text" placeholder="Objet de votre message">
+        </div>
+
+        <div class="form-group mb-4 row">
+          <label class="col-sm-2 col-form-label">Cc:</label>
+          <div class="col-sm-10 d-flex align-items-center">
+
+            <label class="radio radio-grey radio-primary radio-inline">
+              <input type="radio" formControlName="cc" [value]="'mail_commercial_cc'" checked="">
+              <span class="input-span"></span>Commercials</label>
+
+            <label class="radio radio-grey radio-primary radio-inline">
+              <input type="radio" formControlName="cc" [value]="'mail_logistics_cc'">
+              <span class="input-span"></span>Logistiques</label>
+          </div>
         </div>
 
         <div class="form-group mb-4">
@@ -52,7 +66,7 @@
   <div class="modal-footer justify-content-between bg-primary-50">
     <div></div>
     <div>
-      <button class="btn btn-success mr-3" (click)="onSend()">Envoyer</button>
+      <button class="btn btn-success mr-3" type="submit">Envoyer</button>
       <button class="btn btn-secondary mr-3" data-dismiss="modal">Annuler</button>
     </div>
 
