--- a/src/assets/css/freezone.css
+++ b/src/assets/css/freezone.css
@@ -1,5 +1,5 @@
 .ng-invalid.ng-touched:not(form) {
-    border: 1px solid red;
+    border: 1px dotted red;
 }
 select.form-control {
     font-family: inherit;
