--- a/src/app/pages/quotation/quotation-view/quotation-view.component.html
+++ b/src/app/pages/quotation/quotation-view/quotation-view.component.html
@@ -23,22 +23,22 @@
 
                     <div class="row mb-2">
                       <div class="col-6 text-muted">STAT:</div>
-                      <div class="col-6">Lynn</div>
+                      <div class="col-6">{{ownerClient.stat}}</div>
                     </div>
 
                     <div class="row mb-2">
                       <div class="col-6 text-muted">NIF:</div>
-                      <div class="col-6">Weaver</div>
+                      <div class="col-6">{{ownerClient.nif}}</div>
                     </div>
 
                     <div class="row mb-2">
                       <div class="col-6 text-muted">RC:</div>
-                      <div class="col-6">Weaver</div>
+                      <div class="col-6">{{ownerClient.rc}}</div>
                     </div>
 
                     <div class="row mb-2">
                       <div class="col-6 text-muted">CIF:</div>
-                      <div class="col-6">Weaver</div>
+                      <div class="col-6">{{ownerClient.cif}}</div>
                     </div>
 
                 </div>
