--- a/src/app/components/filter-article/filter-article.component.html
+++ b/src/app/components/filter-article/filter-article.component.html
@@ -1,5 +1,6 @@
 <form id="filter-form">
   <div class="row">
+
     <div class="form-group mb-4 col-sm-4">
       <ng-select name="supplier" (change)="onAdd($event)" placeholder="Selectionner un fournisseur"
         [(ngModel)]="filterForm.supplier" bindLabel="company_name" bindValue="id" [searchFn]="customSearchFn"
@@ -9,7 +10,6 @@
           <small>{{item.reference}}</small>
         </ng-template>
       </ng-select>
-
     </div>
 
     <div class="form-group mb-4 col-sm-4">
@@ -17,8 +17,15 @@
         [(ngModel)]="filterForm.categorie" bindLabel="name" bindValue="id" [searchFn]="customSearchFn"
         [hideSelected]="true" [multiple]="false" [items]="Categories">
       </ng-select>
-
     </div>
+
+    <div class="form-group mb-4 col-sm-4">
+        <ng-select name="status" (change)="onAdd($event)" placeholder="Rechercher par statut"
+          [(ngModel)]="filterForm.status" bindLabel="label" bindValue="value" 
+          [hideSelected]="false" [multiple]="false" [items]="Status">
+        </ng-select>
+      </div>
+
   </div>
 
 </form>
