--- a/src/app/pages/supplier/review-mail-supplier/review-mail-supplier.component.html
+++ b/src/app/pages/supplier/review-mail-supplier/review-mail-supplier.component.html
@@ -45,11 +45,11 @@
           <div class="col-sm-10 d-flex align-items-center">
 
             <label class="radio radio-grey radio-primary radio-inline">
-              <input type="radio" formControlName="cc" [value]="'mail_commercial_cc'" checked="">
+              <input type="checkbox" formControlName="mail_commercial_cc"  checked="">
               <span class="input-span"></span>Commercials</label>
 
             <label class="radio radio-grey radio-primary radio-inline">
-              <input type="radio" formControlName="cc" [value]="'mail_logistics_cc'">
+              <input type="checkbox" formControlName="mail_logistics_cc">
               <span class="input-span"></span>Logistiques</label>
           </div>
         </div>
