--- a/src/app/pages/supplier/supplier-datatable/supplier-datatable.component.html
+++ b/src/app/pages/supplier/supplier-datatable/supplier-datatable.component.html
@@ -23,7 +23,9 @@
               <th>Nom de société</th>
               <th>Reference</th>
               <th>Email</th>
-              <th>Date d'enregistrement</th>
+              <th>Téléphone</th>
+              <th>NIF</th>
+              <th>STAT</th>
               <th>Actions</th>
             </tr>
           </thead>
