--- a/src/app/pages/supplier/review-supplier/review-supplier.component.html
+++ b/src/app/pages/supplier/review-supplier/review-supplier.component.html
@@ -35,7 +35,7 @@
                   <th>Reference</th>
                   <th>Numéro de telephone</th>
                   <th>Email</th>
-                  <th>Date d'inscription</th>
+                  <th>Nom du responsable</th>
                   <th class="pr-4">Action</th>
                 </tr>
               </thead>
