--- a/src/app/pages/supplier/review-mail-supplier/review-mail-supplier.component.html
+++ b/src/app/pages/supplier/review-mail-supplier/review-mail-supplier.component.html
@@ -28,7 +28,7 @@
             <span class="btn-icon-only btn-circle bg-primary-50 text-danger mr-3">{{pendingArticle.length}}</span>
             <div class="flex-1 d-flex">
               <div class="flex-1">
-                <span class="mr-2">Article(s) en attente</span>
+                <span class="mr-2">Article(s) en attente au total</span>
               </div>
             </div>
           </div>
@@ -51,6 +51,18 @@
             <label class="radio radio-grey radio-primary radio-inline">
               <input type="checkbox" formControlName="mail_logistics_cc">
               <span class="input-span"></span>Logistiques</label>
+          </div>
+        </div>
+
+        <div class="form-group mb-4 row">
+          <label class="col-sm-2 col-form-label">Articles:</label>
+          <div class="col-sm-10">
+            <ng-select name="articles" placeholder="Selectionnez" formControlName="articles"
+              bindLabel="post_title" bindValue="ID" [hideSelected]="true" [multiple]="true" [items]="pendingArticle">
+              <ng-template ng-option-tmp let-item="item">
+                {{item.post_title}}
+              </ng-template>
+            </ng-select>
           </div>
         </div>
 
