--- a/src/app/components/new-customer/new-customer.component.html
+++ b/src/app/components/new-customer/new-customer.component.html
@@ -43,6 +43,9 @@
         <div>
           <button class="btn btn-primary mr-3" data-dismiss="modal">Fermer</button>
         </div>
+        <div>
+          <a class="btn btn-warning mr-3 redirect" [routerLink]="['/client', customer, 'edit']"  routerLinkActive="active" >Modifier</a>
+        </div>
       </div>
       
     </div>
