--- a/src/app/layouts/app-sidebar/app-sidebar.component.html
+++ b/src/app/layouts/app-sidebar/app-sidebar.component.html
@@ -65,4 +65,10 @@
       </li>
     </ul>
   </li>
+  <li routerLinkActive="active">
+    <a [routerLink]="['/faq']" routerLinkActive="active" >
+      <i class="sidebar-item-icon ti-help-alt"></i>
+      <span class="nav-label">Techniques de vente</span>
+    </a>
+  </li>
 </ul>
