Ajouter des responsables pour les clients

--- a/src/app/pages/clients/edit-client/edit-client.component.html
+++ b/src/app/pages/clients/edit-client/edit-client.component.html
@@ -239,6 +239,7 @@
 
     </div>
     <div class="col-lg-4">
+      <app-responsible [clientId]="customerID" [responsible]="responsible"></app-responsible>
     </div>
   </div>
 </div>
